syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "de.hsaalen.anwendungssicherheit";
option java_outer_classname = "KontoGrpcProto";

package konto;

service KontoGprc {
  rpc getKontoById (KontoGetRequest) returns (KontoReply) {}
  rpc getKontoBewegungenById (KontoGetRequest) returns (stream KontoBewegungReply) {}
  rpc getKontenByEmail (KontenGetRequest) returns (stream KontoReply) {}
  rpc createKonto(KontoCreateRequest) returns (KontoReply) {}
  rpc addKontobewegung(KontoPutRequest) returns (KontoReply) {}
  rpc deleteKonto(KontoDeleteRequest) returns (KontoReply) {}
}

message KontoGetRequest {
  string email = 1;
  string uuid = 2;
}

message KontenGetRequest {
  string email = 1;
}

message KontoDeleteRequest {
  string email = 1;
  string uuid = 2;
}

message KontoCreateRequest {
  string email = 1;
  string beschreibung = 2;
}

message KontoPutRequest {
  string email = 1;
  string uuid = 2;
  double betrag = 3;
  string beschreibung = 4;
}

message KontoReply {
  optional string uuid = 1;
  optional string email = 2;
  optional string beschreibung = 3;
  optional double kontostand = 4;
}

message KontoBewegungReply {
  string beschreibung = 1;
  double betrag = 2;
  google.protobuf.Timestamp timestamp = 3;
}
